
[metadata]
name = tex_tools
keywords=tex_tools
version = 0.0.1
license = "MIT license",
description = Utilities for generating LaTeX files
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/code_printer
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    wand
    Jinja2

[options.packages.find]
where=src



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 88


